--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,28 +1,28 @@
 server.port=11111
 
 # redis
-spring.redis.host=172.81.225.73
+spring.redis.host=192.168.20.131
 spring.redis.port=6379
-spring.redis.password=PL298CS2
+spring.redis.password=123456
 spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=0
 
 # mysql
-spring.datasource.url=jdbc:mysql://192.168.1.88:3306/test?serverTimezone=GMT%2B8&autoR&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://192.168.10.240:3306/yilei-learn?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=yilei
+spring.datasource.password=yilei
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # show sql in console
 logging.level.com.wangzaiplus.test.mapper=debug
 
 # rabbitmq
-spring.rabbitmq.host=192.168.1.88
+spring.rabbitmq.host=192.168.20.131
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=yilei
+spring.rabbitmq.password=yilei
 # 开启confirms回调 P -> Exchange
 spring.rabbitmq.publisher-confirms=true
 # 开启returnedMessage回调 Exchange -> Queue
